--- a/src/sections/Profile/ProfileStyles.module.css
+++ b/src/sections/Profile/ProfileStyles.module.css
@@ -7,8 +7,8 @@
   height: 100dvh;
   min-height: 500px;
 
-  .hero {
-    max-width: 200px;
+  .Profile {
+    max-width: 100px;
   }
 
   span {
@@ -83,7 +83,7 @@
     align-items: center;
     justify-content: space-evenly;
 
-    .hero {
+    .profile {
       max-width: 350px;
       width: 350px;
     }
@@ -92,7 +92,7 @@
 
 @media (width >= 1400px) {
   .container {
-    .hero {
+    .profile {
       max-width: 400px;
       width: 400px;
     }
