--- a/src/sections/Footer/FooterStyles.module.css
+++ b/src/sections/Footer/FooterStyles.module.css
@@ -1,7 +1,8 @@
 .container {
   text-align: center;
-  p {
-    font-size: 16px;
-    color: var(--footer-text-color);
-  }
+}
+
+.container p {
+  font-size: 16px;
+  color: var(--footer-text-color);
 }
