--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -2,26 +2,24 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+}
 
-  img {
-    max-width: 250px;
-    max-height: 250px;
-    align-self: center;
-    background-color: var(--project-card-bg);
-    
-    
-  }
+.container img {
+  max-width: 250px;
+  max-height: 250px;
+  align-self: center;
+  background-color: var(--project-card-bg);
+}
 
-  a {
-    width: fit-content;
-    text-decoration: none;
-    color: #222;
-    transition: transform 200ms ease-in-out;
-  }
+.container a {
+  width: fit-content;
+  text-decoration: none;
+  color: #222;
+  transition: transform 200ms ease-in-out;
+}
 
-  a:hover {
-    transform: scale(1.05);
-  }
+.container a:hover {
+  transform: scale(1.05);
 }
 
 .projectsContainer {
