--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -2,16 +2,16 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+}
 
-  span {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-  }
+.container span {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
 
-  img {
-    width: 20px;
-  }
+.container img {
+  width: 20px;
 }
 
 .skillList {
@@ -35,10 +35,6 @@ hr {
   .skillList {
     max-width: fit-content;
     gap: 30px;
-
-    p {
-      font-size: 20px;
-    }
   }
 
   hr {
