--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,8 @@ body {
 #root {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 20px;
+  padding: 0 10px;
 }
 
 h1,
@@ -74,12 +75,32 @@ p {
   cursor: pointer;
 }
 
-@media (width >= 800px) {
+@media (min-width: 600px) {
+  #root {
+    gap: 40px;
+  }
+  h1 {
+    font-size: 32px;
+  }
+  h2,
+  h3 {
+    font-size: 20px;
+  }
+  p {
+    font-size: 16px;
+  }
+
+  .sectionTitle {
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 800px) {
   #root {
     gap: 60px;
   }
   h1 {
-    font-size: 32px;
+    font-size: 36px;
   }
   h2,
   h3 {
@@ -92,17 +113,17 @@ p {
   .sectionTitle {
     margin-bottom: 40px;
   }
+}
 
-  @media (width >= 1400px) {
-    #root {
-      gap: 100px;
-    }
-    h1 {
-      font-size: 40px;
-    }
+@media (min-width: 1400px) {
+  #root {
+    gap: 100px;
+  }
+  h1 {
+    font-size: 48px;
+  }
 
-    .sectionTitle {
-      margin-bottom: 60px;
-    }
+  .sectionTitle {
+    margin-bottom: 60px;
   }
 }
