--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -31,9 +31,19 @@ hr {
   margin: 30px auto;
 }
 
-@media (width >= 800px) {
+@media (min-width: 600px) {
   .skillList {
     max-width: fit-content;
+    gap: 30px;
+  }
+
+  hr {
+    width: 200px;
+  }
+}
+
+@media (min-width: 800px) {
+  .skillList {
     gap: 30px;
   }
 
