--- a/src/sections/Profile/ProfileStyles.module.css
+++ b/src/sections/Profile/ProfileStyles.module.css
@@ -2,49 +2,55 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 15px;
+  gap: 20px;
   text-align: center;
-  height: 100vh;
+  height: 100dvh;
   min-height: 500px;
-  padding: 0 15px;
-}
 
-.Profile {
-  max-width: 90px;
-}
+  .Profile {
+    max-width: 100px;
+  }
 
-span {
-  display: flex;
-  gap: 15px;
-  justify-content: center;
-}
+  span {
+    display: flex;
+    gap: 25px;
+    justify-content: center;
 
-a {
-  width: fit-content;
-  align-self: center;
-}
+    a {
+      margin: 0;
 
-button {
-  background-color: var(--btn-color);
-  color: var(--btn-text-color);
-  border: none;
-  border-radius: 20px;
-  width: 100%;
-  max-width: 300px;
-  height: 45px;
-  font-size: 18px;
-  font-weight: bold;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
-}
+      img {
+        width: 30px;
+      }
+    }
+  }
 
-button:hover {
-  transform: scale(1.05);
-}
+  a {
+    width: fit-content;
+    align-self: center;
+  }
 
-button:active {
-  transform: translateY(2px);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  button {
+    background-color: var(--btn-color);
+    color: var(--btn-text-color);
+    border: none;
+    border-radius: 20px;
+    width: 126px;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    transition: box-shadow 200ms ease-in-out, transform 200ms ease-in-out;
+  }
+
+  button:hover {
+    transform: scale(1.05);
+  }
+
+  button:active {
+    transform: translateY(2px);
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  }
 }
 
 .colorModeContainer {
@@ -63,52 +69,30 @@ button:active {
 
 .description {
   max-width: 24ch;
-  margin: 0 auto;
 }
 
 .info {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 20px;
 }
 
-@media (max-width: 800px) {
-  .container {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .Profile {
-    max-width: 100px;
-    width: 100px;
-  }
-
-  button {
-    max-width: 90%;
-  }
-}
-
-@media (min-width: 800px) {
+@media (width >= 800px) {
   .container {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-evenly;
-  }
 
-  .Profile {
-    max-width: 300px;
-    width: 300px;
-  }
-
-  button {
-    max-width: 300px;
+    .profile {
+      max-width: 350px;
+      width: 350px;
+    }
   }
 }
 
-@media (min-width: 1400px) {
+@media (width >= 1400px) {
   .container {
-    .Profile {
+    .profile {
       max-width: 400px;
       width: 400px;
     }
