--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -31,7 +31,7 @@
   gap: 30px;
 }
 
-@media (width >= 800px) {
+@media (width <= 800px) {
   .projectsContainer {
     flex-direction: row;
     flex-wrap: wrap;
