--- a/src/sections/Profile/ProfileStyles.module.css
+++ b/src/sections/Profile/ProfileStyles.module.css
@@ -77,7 +77,7 @@
   gap: 20px;
 }
 
-@media (width <= 800px) {
+@media (width >= 800px) {
   .container {
     flex-direction: row-reverse;
     align-items: center;
