--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -39,3 +39,12 @@
     padding: 0 30px;
   }
 }
+
+@media (width >= 1400px) {
+  .projectsContainer {
+    .profile {
+      max-width: 400px;
+      width: 400px;
+    }
+  }
+}
