--- a/src/sections/Profile/ProfileStyles.module.css
+++ b/src/sections/Profile/ProfileStyles.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   text-align: center;
   min-height: 500px;
-  padding: 50px;
+  padding: 20px;
 
   .Profile {
     max-width: 100px;
@@ -51,6 +51,14 @@
     transform: translateY(2px);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   }
+
+  img.profile {
+    max-width: 400px;
+    max-height: 400px;
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+  }
 }
 
 .colorModeContainer {
@@ -77,24 +85,44 @@
   gap: 20px;
 }
 
-@media (width >= 800px) {
-  .container {
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: space-evenly;
 
-    .profile {
-      max-width: 350px;
-      width: 350px;
+@media (max-width: 800px) {
+  .container {
+    padding: 20px;
+
+    img.profile {
+      max-width: 150px;
+      max-height: 150px;
     }
   }
 }
 
-@media (width >= 1400px) {
+
+@media (min-width: 800px) and (max-width: 1400px) {
   .container {
-    .profile {
-      max-width: 400px;
-      width: 400px;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+
+    img.profile {
+      max-width: 500px; 
+      max-height: 500px;
+      padding: 40px;
+    }
+  }
+}
+
+
+@media (min-width: 1400px) {
+  .container {
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 50px;
+
+    img.profile {
+      max-width: 350px; 
+      max-height: 350px;
     }
   }
 }
